Stelle Fristen klarer dar

--- a/index.html
+++ b/index.html
@@ -91,24 +91,29 @@
 	<div class="col-lg-8">
 		<table class="table table-striped table-hover">
 		<tr><th>Aktion</th><th>Frist</th><th>Absatz in FSWO</th></tr>
-		<tr><td>Festlegung des Wahltermins</td><td id="flwahltermin">-</td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#%C2%A710">§ 10 Abs. 2</a></td></tr>
-		<tr><td>Wahl des Wahlleiters und des Wahlausschusses</td><td id="wlundwa">-</td><td> <a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#%C2%A711">§ 11 Abs. 2</a></td></tr>
+		<tr><td>Festlegung des Wahltermins</td><td>bis <span id="flwahltermin">-</span></td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#%C2%A710">§ 10 Abs. 2</a></td></tr>
+		<tr><td>Wahl des Wahlleiters und des Wahlausschusses</td><td>bis <span id="wlundwa">-</span></td><td> <a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#%C2%A711">§ 11 Abs. 2</a></td></tr>
 		<tr><td>Stichtag Wahlberechtigung</td><td id="stwber">-</td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#%C2%A79">§ 9 Abs. 1</a></td></tr>
-		<tr><td>Konstituierende Sitzung des Wahlausschusses</td><td id="konstwa">-</td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#%C2%A713">§ 13 Abs. 4</a></td></tr>
-		<tr><td> Festlegung der Urnenstandorte und -öffnungszeiten <br/>
-                 Festlegung der Auslageorte für das Wählendenverzeichnis und des Zeitraums der Auslage<br/>
-                 Festlegung der gemeinsamen Frist für die Einreichung von Kandidaturen, Briefwahlanträgen und Einsprüchen gegen das Wählendenverzeichnis<br/>
-                 Festlegung des Zeitpunkts des Endes der Wahl und des Ortes für die Auszählung der Wahl<br/>
-                 Festlegung des Ortes und Termins für die konstituierende Sitzung des gewählten Organs<br/>
-            </td><td id="flaowvz">-</td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#%C2%A713">§ 13 Abs. 5</a></td>
+		<tr><td>Konstituierende Sitzung des Wahlausschusses</td><td>bis <span id="konstwa">-</span></td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#%C2%A713">§ 13 Abs. 4</a></td></tr>
+		<tr><td><ul class="list-unstyled"><li>Festlegung der Urnenstandorte und -öffnungszeiten</li>
+			<li>Festlegung der Auslageorte für das Wählendenverzeichnis und des Zeitraums der Auslage</li>
+			<li>Festlegung der gemeinsamen Frist für die Einreichung von Kandidaturen,<br> Briefwahlanträgen und Einsprüchen gegen das Wählendenverzeichnis</li>
+			<li>Festlegung des Zeitpunkts des Endes der Wahl und des Ortes für die Auszählung der Wahl</li>
+			<li>Festlegung des Ortes und Termins für die konstituierende Sitzung des gewählten Organs</li>
+		</ul></td>
+		<td>bis <span id="flaowvz">-</span></td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#%C2%A713">§ 13 Abs. 5</a></td>
         </tr>
-        <tr><td>Übernahme des Wählendenverzeichnisses</td><td id="uebernahmewvz">-</td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#%C2%A714">§ 14 Abs. 1</a></td></tr>
-		<tr><td>Wahlbekanntmachung</td><td id="wbk">-</td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#%C2%A715">§ 15 Abs. 1</a></td></tr>
-		<tr><td class="wb">Auslage des Wählendenverzeichnisses (mindestens 3 Tage)</td><td>Zwischen <p id="alwvzs">-</p> und <p id="alwvze">-</p></td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#%C2%A713">§ 13 Abs. 5</a><br/><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#%C2%A714">§ 14 Abs. 3</a></td></tr>
-		<tr><td class="wb">Frist zur Einreichung von Kandidaturen</td><td>Zwischen <p id="wvs">-</p> und <p id="wve">-</p></td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#%C2%A713">§ 13 Abs. 5</a></td></tr>
+		<tr><td>Übernahme des Wählendenverzeichnisses</td><td>bis <span id="uebernahmewvz">-</span></td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#%C2%A714">§ 14 Abs. 1</a></td></tr>
+		<tr><td>Wahlbekanntmachung</td><td>bis <span id="wbk">-</span></td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#%C2%A715">§ 15 Abs. 1</a></td></tr>
+		<tr><td class="wb"><ul class="list-unstyled">
+			<li>Gemeinsame Frist zur Einreichung von Kandidaturen,</li>
+			<li>zur Einreichung von Briefwahlanträgen, und</li>
+			<li>zur Einreichung von Einsprüchen gegen das Wählendenverzeichnis</li>
+		</ul>
+		</td><td>Zwischen <p id="wvs">-</p> und <p id="wve">-</p></td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#%C2%A713">§ 13 Abs. 5</a></td></tr>
+			<tr><td class="wb">Auslage des Wählendenverzeichnisses (mindestens 3 Tage)</td><td><i>↑ vor dieser Frist</i></td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#%C2%A714">§ 14 Abs. 3</a></td></tr>
 		
-		<tr><td>Bekanntmachung der Wahlvorschläge</td><td id="bkwv">-</td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#%C2%A713">§ 13 Abs. 7</a><br/><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#%C2%A716">§ 16 Abs. 4</a></td></tr>
-		<tr><td class="wb">Frist zur Einreichung von Briefwahlanträgen</td><td>Zwischen <p id="fbws">-</p> und <p id="fbwe">-</p></td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#%C2%A713">§ 13 Abs. 5</a></td></tr>
+		<tr><td>Bekanntmachung der Wahlvorschläge</td><td>ca. <span id="bkwv">-</span></td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#%C2%A713">§ 13 Abs. 7</a><br/><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#%C2%A716">§ 16 Abs. 4</a></td></tr>
 		<tr><td class="wb"><i>Erster Wahltag</i></td><td id="ewt">-</td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#%C2%A710">§ 10 Abs. 1</a></td></tr>
 		<tr><td class="wb"><i>Letzter Wahltag</i></td><td id="lwt">-</td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#%C2%A710">§ 10 Abs. 1</a></td></tr>
 		<!--tr><td>Veröffentlichung des Wahlergebnisprotokolls</td><td id="vwep">-</td></tr-->
