name, wie er auf dem Stimmzettel steht gehört auch zu einer Kandidatur

--- a/Bekanntmachung/wahlbekanntmachung.html
+++ b/Bekanntmachung/wahlbekanntmachung.html
@@ -151,7 +151,7 @@
 
 	            <p>Kandiaturen sind bis zum <b><span class="frist_einreichung_wahlvorschlaege">ein Datum</span></b> um <b><span class="frist_einreichung_wahlvorschlaege_uhrzeit">X UHR</span></b>  bei der <b>Wahlleitung</b> einzureichen. </p>
 
-	            <p>Eine Kandidatur muss mindestens enthalten: Familienname(n), Vorname(n), ladungsfähige Anschrift, E-Mail-Adresse, Matrikelnummer und Unterschrift der kandidierenden Person, sowie Bezeichnung der Wahl, für die die Kandidatur gelten soll</p>
+	            <p>Eine Kandidatur muss mindestens enthalten: Familienname(n), Vorname(n), der Name, wie er auf dem Stimmzettel stehen soll, ladungsfähige Anschrift, E-Mail-Adresse, Matrikelnummer und Unterschrift der kandidierenden Person, sowie Bezeichnung der Wahl, für die die Kandidatur gelten soll</p>
 
 	            <p>(Die Anforderungen an einen Wahlvorschlag ergeben sich aus § 14 FSWO (Siehe http://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#§14)</p>
             </div>
@@ -162,7 +162,7 @@
 
 	            <p>Candidacies must be handed to the election supervisor until <b><span class="frist_einreichung_wahlvorschlaege">ein Datum</span></b> at <b><span class="frist_einreichung_wahlvorschlaege_uhrzeit">X UHR</span></b>  to the <b> election official </b>. </p>
 
-	            <p>The candidacy must at least the following aspects: name, surname, address, email address, matriculation number, the title of the election and a signature.</p>
+	            <p>The candidacy must at least the following aspects: name, surname, how the name should be written on the ballot, address, email address, matriculation number, the title of the election and a signature.</p>
 
 	            <p>The candidacy must be written in German. </p>
 	            
