Ergbnis: Hinweis: nicht gewählt bei 0 Stimmen

--- a/Ergebnis/ergebnis.html
+++ b/Ergebnis/ergebnis.html
@@ -116,11 +116,11 @@
         </div>
         <div class"row">
             <div class="col-sm-6">
-                <p> Die Peronen mit den  <span class="zahl_sitze">11</span> meisten Stimmen sind gewählt.</p>
+                <p> Die ersten <span class="zahl_sitze">11</span> Peronen mit den meisten Stimmen, die mindestens 1 Stimme erhalten haben, sind gewählt.</p>
                 <p> Bei Stimmengleichheit wurde die Reihenfolge gelost.</p>
             </div>
             <div class="col-sm-6">
-                <p> The <span class="zahl_sitze">11</span> persons with most votes are elected. </p>
+                <p> The <span class="zahl_sitze">11</span> persons with most votes are elected, if they got at least 1 vote. </p>
                 <p> If there is an equality of votes the rank is casted.</p>
             </div>
         </div>
