Ergbnis: WPAF Kontaktmöglichkeit

--- a/Ergebnis/ergebnis.html
+++ b/Ergebnis/ergebnis.html
@@ -114,7 +114,7 @@
                 </tbody>
             </table>
         </div>
-        <div class"row">
+        <div class="row">
             <div class="col-sm-6">
                 <p> Die ersten <span class="zahl_sitze">11</span> Peronen mit den meisten Stimmen, die mindestens 1 Stimme erhalten haben, sind gewählt.</p>
                 <p> Bei Stimmengleichheit wurde die Reihenfolge gelost.</p>
@@ -127,11 +127,11 @@
         <div class="row">
             <div class="col-sm-6">
                 <h3>Einspruch gegen das Wahlergebnis</h3>
-                <p>Gegen dieses Wahlergebnis kann innerhalb von 14 Tagen nach Veröffentlichung schriftlich  oder per E-Mail Einspruch beim Wahlprüfungsausschuss der Fachschaftenkonferenz erhoben werden.</p>
+                <p>Gegen dieses Wahlergebnis kann innerhalb von 14 Tagen nach seiner Veröffentlichung am <span class="datum_wahlergebnis">Datum</span> beim Wahlprüfungsausschuss der Fachschaftenkonferenz schriftlich oder per E-Mail an fsen@asta.uni-bonn.de (c/o Fachschaftenreferat) Einspruch erhoben werden.</p>
             </div>
             <div class="col-sm-6">
                 <h3>Objection against the election result</h3>
-                <p> An objection against the election result can be raised until 14 days after its publication. Objections must be handed in by mail or in written form to the Wahlprüfungsausschuss of the Fachschaftenkonferenz. </p>
+                <p> An objection against the election result can be raised until 14 days after its publication on <span class="datum_wahlergebnis">this date</span>. Objections must be submitted to the Wahlprüfungsausschuss of the Fachschaftenkonferenz  in writing or by email to fsen@asta.uni-bonn.de (c/o Fachschaftenreferat). </p>
             </div>
         </div>
         <div class="row">
